# harpoon

./: CMakeLists.txt  build.bash  goals  harpoon-config.cmake  todo  update.bash
include/: CMakeLists.txt  process.hpp  processes.hpp
src/: CMakeLists.txt  main.cpp  process.cpp
test/: CMakeLists.txt  test.cpp
